[package]
name = "rlist-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
axum = "0.7.5"
rlist-drivers = "0.1.2"
rlist_vfs = "0.1.4"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = "1.37.0"
tower = "0.4.13"
tower-http = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
http = "1.1.0"

[dependencies.reqwest]
version = "0.12.4"
features = ["json", "rustls-tls", "rustls-tls-manual-roots", "rustls-tls-native-roots"]
default-features = false
